# oxidize

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: exclude.rs  include.rs  main.rs
src/include/: args.rs  file.rs  setup.rs  vars.rs
